<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/options">
        <menu>
            <item android:id="@+id/nav_camara"
                android:icon="@android:drawable/ic_menu_camera"
                android:title="Camera" />
            <item android:id="@+id/nav_gallery"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/gallery" />
            <item android:id="@+id/nav_slideshow"
                android:icon="@android:drawable/ic_menu_slideshow"
                android:title="Video" />
            <item android:id="@+id/nav_manage"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/tools" />
        </menu>
    </item>

    <!--OPPURE
        <group android:checkableBehavior="single">
            <item android:id="@+id/nav_camara"
                android:icon="@android:drawable/ic_menu_camera"
                android:title="Camera" />
            <item android:id="@+id/nav_gallery"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/gallery" />
            <item android:id="@+id/nav_slideshow"
                android:icon="@android:drawable/ic_menu_slideshow"
                android:title="Video" />
            <item android:id="@+id/nav_manage"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/tools" />
    </group>-->

    <item android:title="@string/communication">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>