<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/app_primary"
                    android:textSize="45dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_decription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_logo"
                    android:layout_alignEnd="@+id/txt_logo"
                    android:layout_alignRight="@+id/txt_logo"
                    android:text="@string/app_decription"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey_600" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/txt_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/noaccount_background"
                        android:gravity="center"
                        android:textColor="@color/grey_1000"
                        android:paddingBottom="15dp"
                        android:clickable="true"
                        android:layout_marginTop="2dp"
                        android:paddingLeft="2dp"
                        android:paddingTop="15dp"
                        android:text="@string/forgot_password"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/txt_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/grey_1000"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/noaccount_background"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingRight="2dp"
                        android:paddingTop="15dp"
                        android:text="@string/create_account"
                        android:clickable="true"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/login_btn"
                    android:textSize="15dp"
                    android:text="@string/login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/grey_1000"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/g_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="5dp" />

                <com.facebook.login.widget.LoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/f_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    fb:login_text="FACEBOOK"
                    android:padding="5dp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>



<!--<android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue_logo"
                        android:drawableEnd="@drawable/ic_audiotrack_light"
                        android:drawableRight="@drawable/ic_audiotrack_light"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/blue_logo" />
                    android:textColorHint="@color/abc_primary_text_material_dark" />-->
<!--    </android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">

<EditText
    android:id="@+id/txt_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:hint="Password"
    android:imeActionId="@+id/login"
    android:imeOptions="actionUnspecified"
    android:inputType="textPassword"
    android:maxLines="1"
    android:padding="8dp"
    android:singleLine="true"
    android:textColorHint="@color/grey_0"
    tools:ignore="InvalidImeActionId" />

</android.support.design.widget.TextInputLayout> -->